apps/bazarr/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: network.speed.2.5g
                    operator: In
                    values:
                      - "true"
              weight: 50
      containers:
        - name: bazarr
          volumeMounts:
            - name: movies-data
              mountPath: /data/movies
            - name: shows-data
              mountPath: /data/shows
      volumes:
        - name: movies-data
          persistentVolumeClaim:
            claimName: movies-data
        - name: shows-data
          persistentVolumeClaim:
            claimName: shows-data
