apps/bazarr/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
spec:
  hostnames:
    - bazarr.i.shikanime.studio
  parentRefs:
    - name: bazarr
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-redirect
spec:
  hostnames:
    - bazarr.i.shikanime.studio
  parentRefs:
    - name: bazarr
      sectionName: http
